--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -90,13 +90,18 @@
     width: 100%;
     height: 6rem;
     margin: 0.5rem 0 0 0;
-    background: var(--card-bg-alt-2);
-    color: var(--card-text-alt-2);
     border: none;
     font-size: 2rem;
     display: grid;
     place-items: center;
     padding: 0;
+  }
+
+  button,
+  button:hover,
+  button:active {
+    background: var(--card-bg-alt-2);
+    color: var(--card-text-alt-2);
   }
 }
 
